--- a/css/header.css
+++ b/css/header.css
@@ -4,36 +4,41 @@
 * {
   margin: 0;
   padding: 0;
-  outline: none;
   vertical-align: top;
+  outline: 0;
 }
-body {
-  font-family: 'Noto Sans', sans-serif;
-  font-size: 14px/1.2;
-  color: #222;
-}
-ul, ol, li {
+ul, li {
   list-style: none;
 }
 a:link {
-  text-decoration: none;
+  text-decoration: none; /*링크 밑줄 삭제*/
 }
 a, button, label {
   display: inline-block;
 }
 button {
-  outline: none;
+  outline: none; /*버튼 박스 외관선 삭제*/
 }
-label, input, button, select, img {
-  vertical-align: middle;
-}
-p {
-  max-height: 999999px;
-  display: block;
+button, img {
+  vertical-align: middle; /*중앙으로 띄움*/
 }
 .static {
   width: 1190px;
   margin: 0 auto;
+}
+/* font 관련 설정 */
+body {
+  font-family: 'Noto Sans', sans-serif;
+  font-size: 14px/1.2;
+  color: #222;
+}
+#gnb li a { /*카테고리 기본 폰트*/
+  font-family: 'Roboto';
+  font-weight: 400;
+  color: #444;
+}
+#gnb ul li:hover a { /*hover 시 색 변환*/
+  color: #3a466a;
 }
 /* main */
 .main .aside {
@@ -49,21 +54,9 @@ p {
 }
 /* header */
 #header {
-  height: 123px;
+  height: 123px; /*헤더 높이*/
   background-color: #fff;
   transition: all 0.5s;
-}
-#header.sticky, #header.on {
-  position: fixed;
-  width: 100%;
-  z-index: 101;
-}
-/* #header.on.open::after {
-  height: 300px;
-  background-color: #f3f3f3;
-} */
-#header .static {
-  position: relative;
 }
 #header:after {
   content: '';
@@ -77,47 +70,75 @@ p {
   visibility: hidden;
   z-index: -1;
 }
+#header.open:after { /*서브메뉴 배경*/
+  top: 122px; /*상단으로부터 122px아래 위치(헤더 높이 123px)*/
+  height: 231px;
+  background-color: rgba(242, 242, 242, 0.9);
+  opacity: 1;
+  z-index: 11;
+  visibility: visible; /*열리면 보임*/
+}
+#header.open #gnb>.mainmenu>li>.submenu {
+  z-index: 12; /*서브메뉴는 배경 위 레이어*/
+  visibility: visible;
+  opacity: 1;
+}
+#header.sticky, #header.on {
+  position: fixed;
+  width: 100%;
+  z-index: 101;
+}
 #header .static::after {
   content: '';
   display: block;
   clear: both;
 }
+/* #header.on.open::after {
+  height: 300px;
+  background-color: #f3f3f3;
+}
+#header .static {
+  position: relative;
+} */
+/*헤더 로고*/
 #header .logo {
   float: left;
   margin-top: 30px;
 }
 #header .logo a {
+  display: block;
   width: 132px;
   height: 64px;
   background: url(../img/logo.png) no-repeat;
   font-size: 0;
 }
-
+/*상단 메뉴*/
 #gnb {
   float: left; /*로고 옆에 나란히 위치*/
   margin: 63px 0 4px 57px;
 }
-#gnb .mainmenu {
-  overflow: hidden;
-  height: 60px;
-  border: lightsalmon solid 1px;
-}
-#gnb .mainmenu:hover {
-  height: 270px; /*펼친 뒤 높이*/
-}
 #gnb>.mainmenu>li {
   float: left;
   position: relative;
-  border: yellow solid 1px;
 }
 #gnb>.mainmenu>li>a {
   display: block;
   padding: 0 29px;
   height: 18px;
+  font-size: 15px;
   line-height: 1.2;
+  color: #444;
   text-align: center;
   text-transform: uppercase; /*소문자를 대문자로 변환*/
-  font-weight: bold; 
+  font-weight: 500; 
+}
+/* #gnb .mainmenu {
+  overflow: hidden;
+  height: 60px;
+  border: lightsalmon solid 1px;
+}
+#gnb .mainmenu:hover {
+  height: 270px;
 }
 #gnb .mainmenu li a {
   display: block;
@@ -126,16 +147,15 @@ p {
   color: #444;
   border: lightseagreen solid 1px;
 }
-/* #gnb ul>li.on {
+#gnb ul>li.on {
   color: hotpink;
-} */
+}
 #gnb .mainmenu li:hover a{
-  color: hotpink; /*메뉴 선택 시 글자색 변경*/
+  color: hotpink;
 }
-
 #gnb .mainmenu:hover .submenu {
-  visibility: visible; /*메인메뉴 선택 시 서브메뉴 펼쳐짐*/
-}
+  visibility: visible;
+} */
 
 #gnb .submenu li {
   display: block;
@@ -147,8 +167,8 @@ p {
   font-weight: bold;
   text-decoration: underline;
 } */
-#gnb>.mainmenu>li>.submenu>li>a:hover{text-decoration:underline;font-weight:700;}
-#gnb>.mainmenu>li:hover a{color:hotpink}
+/* #gnb>.mainmenu>li>.submenu>li>a:hover{text-decoration:underline;font-weight:700;}
+#gnb>.mainmenu>li:hover a{color:hotpink} */
 
 #gnb>.mainmenu>li>.submenu {
   position: absolute;
@@ -159,18 +179,23 @@ p {
   visibility: hidden;
   opacity: 1;
   height: 180px;
-  border: lightsalmon solid 1px;
 }
-#gnb>ul>li>.submenu:hover {
+/* #gnb>ul>li>.submenu:hover {
   z-index: 12;
   visibility: visible;
   opacity: 1;
-}
+} */
 #gnb .submenu>li>a {
   padding-top: 0.5rem 0;
   font-size: 14px;
-  font-family: 'Roboto', sans-serif;
-  border: lightseagreen solid 1px;
+  font-family: 'Roboto';
+}
+#gnb .submenu>li>a:hover {
+  text-decoration: underline;
+  font-weight: 700;
+}
+#gnb>.mainmenu>li.on a {
+  color: #3a466a;
 }
 #gnb>.mainmenu>li:nth-child(1)>a { width: 94px; }
 #gnb>.mainmenu>li:nth-child(2)>a { width: 54px; }
@@ -178,7 +203,7 @@ p {
 #gnb>.mainmenu>li:nth-child(4)>a { width: 114px;}
 #gnb>.mainmenu>li:nth-child(5)>a { width: 64px; }
 #gnb>.mainmenu>li:nth-child(6)>a { width: 84px; }
-
+/*가맹문의 버튼*/
 #header .btn {
   float: right;
   margin-top: 55px;
@@ -187,30 +212,34 @@ p {
   border-radius: 20px;
   padding: 8px 0 8px;
   text-align: center;
-  font-size: 13px;
-  font-weight: 700;
+  font-size: 14px;
   color: #fff;
 }
+/*언어 선택*/
 #header .lang {
   position: absolute;
-  top: 24px;
+  top: 25px;
   right: 0;
   font-size: 12px;
 }
+#header .lang a {
+  display: inline-block;
+  padding: 0 5px 0 6px;
+  font-size: 12px;
+  font-weight: bold;
+}
 .lang .kr {
   color: #444;
-  /* margin: 0 0 0 5px; */
-  font-weight: 600;
 }
 .lang .en {
+  position: relative;
   color: #707070;
-  margin: 0 5px 0 6px;
-  font-weight: 600;
 }
 .lang .en::before {
   content: '';
-  display: inline-block;
-  margin-right: 5px;
+  display: block;
+  position: absolute;
+  top: 3px; left: 0;
   width: 1px;
   height: 9px;
   background: #d4d4d4;
@@ -220,13 +249,13 @@ footer {
   display: block;
   height: 209px;
 }
-
 .footer-top {
   height: 43px;
 }
 .footer-top .static {
   position: relative;
   padding-bottom: 27px;
+
 }
 .footer-top .static ul li span {
   display: inline;
@@ -237,27 +266,24 @@ footer {
 .footer-top ul li {
   display: block;
   font-size: 14px;
+  font-weight: 700;
   float: left;
   margin-right: 30px;
 }
 .footer-top ul li a {
   color: #3a466a;
-  font-weight: bold;
 }
 .footer-top ul li span {
   color: #00a6b1;
-  font-weight: bold;
 }
 .footer-top .btn-top {
   position: absolute;
   top: 0;
   right: 0;
-}
-.btn-top {
+  background: url(../img/ico-arr-top.png);
   display: inline-block;
   width: 27px;
   height: 15px;
-  background: url(../img/ico-arr-top.png);
   font-size: 0;
   border: 0;
   outline: 0;
