--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -28,12 +27,12 @@ button, img {
 }
 /* font 관련 설정 */
 body {
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
   font-size: 14px/1.2;
   color: #222;
 }
 #gnb li a { /*카테고리 기본 폰트*/
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-weight: 400;
   color: #444;
 }
@@ -93,13 +92,6 @@ body {
   display: block;
   clear: both;
 }
-/* #header.on.open::after {
-  height: 300px;
-  background-color: #f3f3f3;
-}
-#header .static {
-  position: relative;
-} */
 /*헤더 로고*/
 #header .logo {
   float: left;
@@ -132,44 +124,10 @@ body {
   text-transform: uppercase; /*소문자를 대문자로 변환*/
   font-weight: 500; 
 }
-/* #gnb .mainmenu {
-  overflow: hidden;
-  height: 60px;
-  border: lightsalmon solid 1px;
-}
-#gnb .mainmenu:hover {
-  height: 270px;
-}
-#gnb .mainmenu li a {
-  display: block;
-  font-family: 'Roboto', sans-serif;
-  font-size: 15px;
-  color: #444;
-  border: lightseagreen solid 1px;
-}
-#gnb ul>li.on {
-  color: hotpink;
-}
-#gnb .mainmenu li:hover a{
-  color: hotpink;
-}
-#gnb .mainmenu:hover .submenu {
-  visibility: visible;
-} */
-
 #gnb .submenu li {
   display: block;
   padding: 3px 0 10px 0;
-  
 }
-/* #gnb .mainmenu:hover li .submenu:hover li a{
-  color: hotpink;
-  font-weight: bold;
-  text-decoration: underline;
-} */
-/* #gnb>.mainmenu>li>.submenu>li>a:hover{text-decoration:underline;font-weight:700;}
-#gnb>.mainmenu>li:hover a{color:hotpink} */
-
 #gnb>.mainmenu>li>.submenu {
   position: absolute;
   width: 100%;
@@ -180,11 +138,6 @@ body {
   opacity: 1;
   height: 180px;
 }
-/* #gnb>ul>li>.submenu:hover {
-  z-index: 12;
-  visibility: visible;
-  opacity: 1;
-} */
 #gnb .submenu>li>a {
   padding-top: 0.5rem 0;
   font-size: 14px;
@@ -217,9 +170,10 @@ body {
 }
 /*언어 선택*/
 #header .lang {
-  position: absolute;
+  /* position: absolute; */
+  position: relative;
   top: 25px;
-  right: 0;
+  right: -135px;
   font-size: 12px;
 }
 #header .lang a {
